PlayerData can now be saved and retrieved in SQL and JSON